--- a/src/index.html
+++ b/src/index.html
@@ -1,53 +1,161 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link rel="stylesheet" href="css/bootstrap.min.css">
+   <link rel="stylesheet" href="css/style.css">
+   <title>Points task</title>
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <div class="menu">
-        <div class="logo menu__logo">Repair Design Project</div>
-        <!-- /.logo -->
-        <nav class="nav menu__logo">
-          <a href="#" class="nav__item">Главная</a>
-          <a href="#" class="nav__item">Проекты</a>
-          <a href="#" class="nav__item">Замер</a>
-          <a href="#" class="nav__item">Команда</a>
-          <a href="#" class="nav__item">Отзывы</a>
-          <a href="#" class="nav__item">Контакты</a>
-        </nav>
-        <!-- /.nav -->
-        <div class="contacts menu__contacts">
-          <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button contacts__button button--primary">Заказать звонок</button>
-        </div>
-        <!-- /.contacts menu__contacts -->
+
+   <header class="header">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-8 col-sm-12">
+               <h4 class="header__title">
+                  Городская юридическая служба «Максимум»
+               </h4>
+            </div>
+            <div class="col-md-4 col-sm-12">
+               <div class="header__callback">
+                  <button class="button button__header">Заказать звонок</button>
+               </div>
+            </div>
+         </div>
       </div>
-      <!-- /.menu -->
-    </div>
-    <!-- /.container -->
-  </header>
-  <main>
-    <section class="hero">
-      <a href="#" class="instagram hero__instagram">instagram</a>
-      <div class="hero__content">
-        <div class="container">
-          <h1 class="title hero__title">Турецкий ремонт в Ростове-на-дону</h1>
-          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-          <button class="button hero__button button--primary">Рассчитать стоимость</button>
-          <button class="button hero__button button--outline">Отправить заявку</button>
-        </div>
-        <!-- /.container -->
+   </header>
+   
+   <div class="section main">
+     <div class="container">
+         <h1>юридическая защита ваших интересов
+            <span class="coral">*</span>
+         </h1>
+         <div class="sep"></div>
+         <h3>Уникальный алгоритм помощи</h3>
+         <p class="main__location">Работаем по всей стране!</p>
+         <button class="button button__coral">Оформить карту!</button>
+         <p class="comment"><span class="coral">*</span>
+            Интересы - это то, что является для вас важным</p>
+     </div>
+   </div>
+
+   <div class="section problems">
+      <div class="container">
+         <h2 class="section__title">Обращайтесь к нам,<br>
+            и мы поможем вам разобраться</h2>
+         <div class="section__underline"></div>
+         <div class="row">
+            <div class="col-md-6 col-xs-12">
+               <div class="problems__list">
+                  <ul>
+                     <li>Споры с застройщиками. Работники нарушили условия или сроки договора.
+                        Или вы заметили нашушения с технической стороны.</li>
+                     <li>Наследственные споры. Не можете с родственниками
+                        поделить наследство. Не знаете, как составить наследство.</li>
+                     <li>Жилищные споры. Если у вас возник конфликт с сожителями.
+                        Или возникли вопросы с пропиской.</li>
+                  </ul>
+               </div>
+            </div>
+            <div class="col-md-6 col-xs-12">
+               <div class="problems__list">
+                  <ul>
+                     <li>Семейные споры. Разногласия при разводе сопругов.
+                        Вопросы по совместному воспитанию детей</li>
+                     <li>Защита прав потребителей. Покупка некачественных товаров.
+                        Нарушения условия гарантии. Нарушений прав потребителей.</li>
+                     <li>Защита прав автовладельцев. Вопросы при продаже / покупке автомобиля.
+                        Конфликты при ДТП.</li>
+                  </ul>
+               </div>
+            </div>
+            <div class="problems__wrapper">
+               <p>Самое главное, понять, что что-то идёт не так. И как можно быстрее
+                  начать сразу исправлять проблему. Всё в Ваших руках!</p>
+               <button class="button button__problems">Приступить к решению прямо сейчас</button>
+            </div>
+         </div>
       </div>
-      <!-- /.hero__content -->
-      <a href="#" class="scroll-down">листайте вниз</a>
-    </section>
-    <!-- /.hero -->
-  </main>
+   </div>
+
+   <div class="section prove">
+      <div class="container">
+         <h2 class="section__title">Почему мы лучшие?</h2>
+         <div class="section__underline"></div>
+         <div class="row">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+               <div class="prove__img">
+                  <img src="img/prove-1.png" alt="">
+               </div>
+               <p>Средний стаж юристов 19 лет. 
+                  Выигранно более 1230 досудебных и судебных споров.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+               <div class="prove__img">
+                  <img src="img/prove-4.png" alt="">
+               </div>
+               <p>Углубленный правовой анализ до начала работы 
+                  гарантирует 100% результат.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+               <div class="prove__img">
+                  <img src="img/prove-2.png" alt="">
+               </div>
+               <p>Полная конфидициальность и четкое соблюдение сроков.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+               <div class="prove__img">
+                  <img src="img/prove-6.png" alt="">
+               </div>
+               <p>Ответственность за результат. Наши обязанности 
+                  четко прописаны в договоре.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+               <div class="prove__img">
+                  <img src="img/prove-6.png" alt="">
+               </div>
+               <p>Оплата по факту выполненных работ. Без навязанных услуг и доплат.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+               <div class="prove__img">
+                  <img src="img/prove-5.png" alt="">
+               </div>
+               <p>Решение ваших вопросов за возможное наикоротшее время</p>
+            </div>
+         </div>
+      </div>
+   </div>
+
+   <section class="section start">
+      <div class="container">
+         <h2 class="section__title">Решить проблемы очень просто! <br>
+            Нужно <span>позвонить нам</span> и <span>начать работу</span>!
+         </h2>
+         <button class="button button__start">связаться с нами</button>
+      </div>
+   </section>
+
+   
+   <footer class="footer">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-7 col-xs-12">
+               <div class="footer__left">
+                  Все права защищены. Любое несанкционированное копирование и распространение информации в любом ее виде, 
+                  расположенной на данном сайте, преследуется по закону.
+               </div>
+            </div>
+            <div class="col-md-5 col-xs-12">
+               <div class="footer__right">
+                  <p>Разработка сайта</p>
+                  <a href="#">Крутой web-developer</a>
+               </div>
+            </div>
+         </div>
+      </div>
+   </footer>
+
 </body>
 </html>
